yaapp/media/css/webapp.css
/* ... */
#favorite-radio:hover{
	background-image:url('../app/images/over-star.png');
	height:36px;
	width:37px;
	display:inline-block;
	float:left;
	margin: 21px 0px 0px 19px;
}

#play-btn {
    -webkit-appearance: none;
    border: none;
    height:33px;
	width:33px;
	display:inline-block;
	float:left;
	margin: 21px 0px 0px 19px;
	border-radius:50%;
	background-image:url('../app/images/play-btn-bg.png');
	box-shadow: 0px 1px 4px black;
	position:relative;
	cursor:pointer;
}

#play-btn i {
	position:absolute;
	top:9px;
	left:10px;
}


#title-volume {
	height:76px	;
	width:200px;
}

.ui-slider .ui-slider-handle {  
    position: absolute;
    z-index: 2;  
    width: 20px;
    height: 20px;  
    cursor: pointer;  
    background: url('../app/images/volume-btn.png') no-repeat 50% 50%;  
    font-weight: bold;  
    color:#1C94C4;  
    outline:none;  
    top:-7px;  
    margin-left:-12px;
    border:none;
}

.ui-slider .ui-slider-range {
    background-image: url('../app/images/slider-range-bg.png');
    position: absolute;
    border: 0;  
    top: 0;  
    height: 69%;  
    border-radius: 25px;
	border:1px solid black;
	shadow-box: 0px 1px 1px #313334 ;
	background-color:black;
}

#sound-level {
	display:inline-block;
	float:left;
    width:190px;
    padding-top:12px;
    padding-left:20px;
}

#slider-container {
	float:left;
	width:150px;
}

#volume-slider{  
	margin-top:10px;
	height:9px;
	width:149px;
	background: url('../app/images/level-bar.png');
 	background-repeat:no-repeat;
	border:none;
}

#min-level {
	display:inline-block;
	float:left;
	margin-top:23px;
	margin-right:6px;
}

#level-bar {
	background-image:url('../app/images/level-bar.png');
	background-position:center;
}

#max-level {
	display:inline-block;
	float:right;
    margin-top:23px;
}


.header-social-btn {
	float:left;
	display:inline-block;
	padding: 31px 0px 0px 10px;
}

#first-social-btn {
	padding-left:17px;
}

#share-btn {
	display:inline-block;
	float:left;
	height:18px;
	width:24px;
	background-image:url('../app/images/share-btn.png');
}

#share-btn:hover {
	display:inline-block;
	float:left;
	height:18px;
	width:24px;
	background-image:url('../app/images/hover-share-btn.png');
}

#love-btn {
	display:inline-block;
	float:left;
	height:18px;
	width:20px;
	background-image:url('../app/images/love-btn.png');
	background-repeat:no-repeat;
}

#love-btn:hover {
	display:inline-block;
	float:left;
	height:18px;
	width:20px;
	background-image:url('../app/images/hover-love-btn.png');
	background-repeat:no-repeat;
}

#shop-btn {
	display:inline-block;
	float:left;
	height:19px;
	width:25px;
	background-image:url('../app/images/shop-btn.png');
	background-repeat:no-repeat;
}

#shop-btn:hover {
	display:inline-block;
	float:left;
	height:19px;
	width:25px;
	background-image:url('../app/images/hover-shop-btn.png');
	background-repeat:no-repeat;
}

#profile-picture {
	float:left;
	display:inline-block;
	padding: 19px 0px 0px 16px;
}

.notification {
	width:38px;
	height:38px;
	position:relative;
	float:left;
	display:inline-block;
	padding: 19px 0px 0px 25px;
}

#message-position-absolute {
	display:inline-block;
	height:20px;
	width:20px;
	position:absolute;
	background-image:url('../app/images/messages-bg-color.png');
	background-repeat:repeat-x;
	top:10px;
	left:8px;
	border-radius:20px;
	border:1px solid #0f2937;
	font-family:Arial;
	font-size:12px;
	overflow:hidden;
	line-height:20px;
	padding:0px;
	text-align:center;
}

#last-social-btn {
	float:right;
	margin-top:2px;
}

#messages-btn {
	height:33px;
	width:36px;
	background-image:url('../app/images/messages-btn.png');
	background-repeat:no-repeat;
	position:relative;
	top:19px;
	left:26px;
	padding:0px;	
}

#messages-btn:hover {
	height:33px;
	width:36px;
	background-image:url('../app/images/hover-messages-btn.png');
	background-repeat:no-repeat;
	position:relative;
	top:19px;
	left:26px;
}

#gift-btn {
	display:inline-block;
	height:32px;
	width:34px;
	background-image:url('../app/images/gift-btn.png');
	background-repeat:no-repeat;
}

#gift-btn:hover {
	display:inline-block;
	height:32px;
	width:34px;
	background-image:url('../app/images/hover-gift-btn.png');
	background-repeat:no-repeat;
}

#header .brand {
	margin: 0;
	padding: 0;
}

.brand {
	margin-top: 10px;
}

#tbar-search {
	margin-top: -14px;
}

/*-- SUB-HEADER --*/

#sub-header {
	height:55px;
	width:100%;
	background-image:url('../app/images/sub-header-bg.png');
	background-repeat: repeat-x;
	box-shadow: 3px 0px 4px #cfcfcf;
	clear:both;
	position:fixed;
	top:76px;
}

#sub-header-container {
	height:55px;
	position:relative;
}

#sub-header-pointer {
	position:absolute;
	bottom:-7px;
	left:23px;
	background-image:url('../app/images/sub-header-pointer.png');
	width:14px;
	height:9px;
	background-repeat:no-repeat;
	-webkit-transition: left 0.5s ease;
    -moz-transition: left 0.5s ease;
    -ms-transition: left 0.5s ease;
    -o-transition: left 0.5s ease;
    transition: left 0.5s ease;
	
}

#sub-header-pointer.menu1 {
	left:23px;
}

#sub-header-pointer.menu2 {
    left:93px;
}

#sub-header-pointer.menu3 {
    left:163px;
}

#sub-header-pointer.menu4 {
    left:243px;
}

#sub-header-nav {
    display:inline-block;
    float:left;
    width:320px;
	height:56px;
    margin-left:0px;
	overflow:hidden;
}

#sub-header-nav li {
	display:inline-block;
	float:left;
	list-style:none;
	padding: 19px 12px;
}

#sub-header-nav li a {
	color:#7b8082;
	text-shadow:1px 1px 1px white;
	font-size:15px;
    -webkit-transition: all 0.5s ease;
    -moz-transition: all 0.5s ease;
    -ms-transition: all 0.5s ease;
    -o-transition: all 0.5s ease;
    transition: all 0.5s ease;
}

#sub-header-nav li a:hover {
	color:#474b4d;
	text-shadow:1px 1px 1px white;
	text-decoration:none;
}

#sub-header-nav li.selected a {
    color:#474b4d;
    text-shadow:1px 1px 1px white;
    text-decoration:none;
}

#sub-header-nav .first {
	padding-left:0px;
}
/* ... */

